--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "language-slax",
-  "version": "0.0.1",
+  "version": "0.0.17",
   "description": "Syntax highlighting for Juniper SLAX",
-  "keywords": [
-  ],
-  "repository": "https://github.com/dpajin/atom-language-slax",
-  "license": "MIT",
-  "engines": {
-    "atom": ">=1.0.0"
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dpajin/atom-language-slax.git"
   },
-  "dependencies": {
-  }
+  "license": "apache-2.0",
+  "engines": {
+    "atom": ">=1.0.0 <2.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/dpajin/atom-language-slax/issues"
+  },
+  "homepage": "https://github.com/dpajin/atom-language-slax#readme",
+  "dependencies": {}
 }
