extended with SLAX most of the keywords for SLAX 1.0 and 1.1

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "language-slax",
   "version": "0.0.17",
   "description": "Syntax highlighting for Juniper SLAX",
-  "keywords": [],
+  "keywords": [ 
+    "slax", 
+    "juniper", 
+    "junos" 
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/dpajin/atom-language-slax.git"
